<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <fragment
        android:id="@+id/connectionToolbar"
        android:name="sebere_peree_dulie_cornaton.xoxo.Fragments.ToolbarFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/winner_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Error"
        android:textSize="40sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:textSize="30sp"
            android:text="@string/saveGame" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/save_switch"
            android:layout_weight="80"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"/>

    </LinearLayout>

    <Button
        android:id="@+id/replay_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/replay"/>

    <Button
        android:id="@+id/look_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/look_again"
        />

    <Button
        android:id="@+id/back_to_menu_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/backToMenu"/>

</LinearLayout>